Fine Tuned the UI

--- a/classes/artifacts/web_war_exploded/WEB-INF/pages/index.html
+++ b/classes/artifacts/web_war_exploded/WEB-INF/pages/index.html
@@ -1,26 +1,22 @@
 <!--
-  ~
   ~    (C) Copyright 2006-2007 hSenid Software International (Pvt) Limited.
   ~    All Rights Reserved.
-  ~
   ~    These materials are unpublished, proprietary, confidential source code of
   ~    hSenid Software International (Pvt) Limited and constitute a TRADE SECRET
   ~    of hSenid Software International (Pvt) Limited.
-  ~
   ~    hSenid Software International (Pvt) Limited retains all title to and intellectual
   ~    property rights in these materials.
-  ~
-  ~
   -->
 
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
 
-<web-app>
-    <context-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/servlet.xml</param-value>
-    </context-param>
+<p>sjhgjdcgdv</p>
 
-</web-app>
+</body>
+</html>
