--- a/web-service/src/main/webapp/index.html
+++ b/web-service/src/main/webapp/index.html
@@ -77,8 +77,8 @@
                 <p>Are you sure you want to delete this Employee Details?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
-                <button type="button" class="btn btn-primary">Yes</button>
+                <button type="button" class="btn btn-danger" id="deleteCancel" data-dismiss="modal">No</button>
+                <button type="button" class="btn btn-primary" id="deleteConfirm">Yes</button>
             </div>
         </div>
     </div>
