--- a/web-service/src/main/webapp/pages/createUser.html
+++ b/web-service/src/main/webapp/pages/createUser.html
@@ -40,7 +40,7 @@
         <form class="register-form" id="register">
             <input class="input" type="text" placeholder="name" id="name" required>
             <input class="input" type="text" placeholder="address" id="address" required>
-            <input class="input" type="email" placeholder="email address" id="email" required>
+            <input class="input" type="email" placeholder="email addres" id="email" required>
             <input class="input" type="text" placeholder="tel" id="number" onkeypress="return isNumber(event)" required>
             <input class="buttonSub" type="submit">
             <button class="cancel">cancel</button>
